src/objects/Approvement__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RelocationId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>RelocationId</label>
        <referenceTo>Relocation__c</referenceTo>
        <relationshipLabel>Approvements</relationshipLabel>
        <relationshipName>Approvments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Approvements</relationshipLabel>
        <relationshipName>Approvments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Approvement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Approvement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approvements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>